--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,13 +6,46 @@
     android:layout_height="match_parent"
     tools:context=".activity.HomeActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HOME"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textViewUserId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="userID" />
+
+        <TextView
+            android:id="@+id/textViewBalance"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="balance" />
+
+        <TextView
+            android:id="@+id/textViewRP"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="reward poin" />
+
+        <TextView
+            android:id="@+id/textViewnextRoll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="next roll" />
+
+        <TextView
+            android:id="@+id/textViewRPBonus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="RP bonus" />
+
+        <TextView
+            android:id="@+id/textViewBTCBonus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="BTC bonus" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
