--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -47,12 +47,26 @@
             android:layout_height="wrap_content"
             android:text="BTC bonus" />
 
+        <Button
+            android:id="@+id/buttonStart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start" />
+
+        <Button
+            android:id="@+id/buttonStop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Stop" />
+
         <WebView
             android:id="@+id/webView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:visibility="invisible"
-            tools:visibility="invisible" />
+            tools:visibility="invisible">
+
+        </WebView>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
