--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -47,6 +47,12 @@
             android:layout_height="wrap_content"
             android:text="BTC bonus" />
 
+        <TextView
+            android:id="@+id/textViewService"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="OFF" />
+
         <Button
             android:id="@+id/buttonStart"
             android:layout_width="wrap_content"
