--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -53,6 +53,18 @@
             android:layout_height="wrap_content"
             android:text="OFF" />
 
+        <TextView
+            android:id="@+id/textViewFP1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="0000" />
+
+        <TextView
+            android:id="@+id/textViewFP2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="0000" />
+
         <Button
             android:id="@+id/buttonStart"
             android:layout_width="wrap_content"
@@ -64,6 +76,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Stop" />
+
+        <Button
+            android:id="@+id/buttonHistory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show Histories" />
 
         <TableLayout
             android:id="@+id/tableLayout"
