--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,8 @@
     <color name="drawerMenu">#282828</color>
     <color name="midBlue">#1d7ca7</color>
     <color name="orange1">#ffb347</color>
+    <color name="orange2">#ffa320</color>
+    <color name="orange3">#ff9b0c</color>
 
     <color name="greyishBrown">#8e8e99</color>
     <color name="greyWhite">#e0e0e3</color>
