--- a/app/src/main/res/drawable/button_card.xml
+++ b/app/src/main/res/drawable/button_card.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="5dp">
-    <solid android:color="@color/orange1"/>
+    <gradient
+        android:startColor="@color/orange1"
+        android:centerColor="@color/orange2"
+        android:endColor="@color/orange3"
+        android:angle="135"/>
     <corners android:radius="15dp"/>
 </shape>
