--- a/app/src/main/res/layout/splash_main.xml
+++ b/app/src/main/res/layout/splash_main.xml
@@ -8,11 +8,20 @@
     tools:context=".activity.SplashActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/avenir_roman"
+        android:text="RobocoinX"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@id/header"
+        app:layout_constraintEnd_toEndOf="@id/header"/>
+    <TextView
+        android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
-        android:text="@string/app_name"
+        android:text="FREEBITCOIN"
         android:textAllCaps="true"
         android:textSize="40sp"
         android:fontFamily="@font/gotham_bold"
@@ -31,6 +40,6 @@
         android:layout_marginEnd="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/header" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
