--- a/app/src/main/res/layout/menu_option.xml
+++ b/app/src/main/res/layout/menu_option.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/button_blue"
+    android:background="#269acf"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -87,7 +87,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layoutNotification"
+        android:id="@+id/layoutDeposit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -97,6 +97,46 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/layoutWithdraw">
+
+        <ImageButton
+            android:id="@+id/buttonDeposit"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/button_radius"
+            android:padding="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/ic_deposit" />
+
+        <TextView
+            android:id="@+id/textDeposit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:fontFamily="@font/avenir_roman"
+            android:textSize="15sp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:text="Deposit"
+            app:layout_constraintStart_toEndOf="@id/buttonDeposit"
+            app:layout_constraintTop_toTopOf="@id/layoutDeposit" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutNotification"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/button_radius"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layoutDeposit">
 
         <ImageButton
             android:id="@+id/buttonNotification"
