--- a/app/src/main/res/layout/view_transaction.xml
+++ b/app/src/main/res/layout/view_transaction.xml
@@ -18,7 +18,7 @@
 
         <ImageButton
             android:id="@+id/imgTransaction"
-            android:layout_width="40dp"
+            android:layout_width="35dp"
             android:layout_height="35dp"
             android:src="@drawable/ic_right"
             android:background="@drawable/small_button_green"
@@ -35,6 +35,7 @@
             android:layout_marginTop="11dp"
             android:textSize="16sp"
             android:fontFamily="@font/gotham_bold"
+            android:textColor="@color/colorPrimary"
             android:text="@string/transaction_name"
             app:layout_constraintStart_toEndOf="@+id/imgTransaction"
             app:layout_constraintTop_toTopOf="parent" />
