--- a/app/src/main/res/drawable/button_withdraw.xml
+++ b/app/src/main/res/drawable/button_withdraw.xml
@@ -2,6 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/transacGreen"/>
-    <corners android:bottomLeftRadius="8dp"
-        android:topLeftRadius="8dp"/>
+    <corners android:radius="10dp"/>
 </shape>
