--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".activity.SignUpActivity">
+    tools:context=".activity.ForgotPasswordActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -30,7 +30,7 @@
                 android:fontFamily="@font/avenir_roman" />
 
             <Button
-                android:id="@+id/buttonLoginSG"
+                android:id="@+id/buttonLoginFP"
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:textColor="@color/white"
@@ -46,11 +46,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="60dp"
-            android:textSize="35sp"
+            android:textSize="20sp"
             android:textColor="@color/white"
             android:fontFamily="@font/gotham_bold"
             android:textAllCaps="true"
-            android:text="@string/header"
+            android:text="@string/label_forgot_pass"
             app:layout_constraintBottom_toTopOf="@+id/layout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -79,7 +79,7 @@
                 android:text="@string/label_email" />
 
             <EditText
-                android:id="@+id/editTextEmailSG"
+                android:id="@+id/editTextEmailFP"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -90,27 +90,6 @@
                 android:textColorHint="@color/white"
                 android:textColor="@color/white" />
 
-            <TextView
-                android:id="@+id/labelPass"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:textSize="12sp"
-                android:textColor="@color/textHint"
-                android:fontFamily="@font/avenir_roman"
-                android:text="@string/label_password" />
-
-            <EditText
-                android:id="@+id/editTextPassSG"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:textSize="16sp"
-                android:fontFamily="@font/avenir_roman"
-                android:background="@drawable/line_edit_text"
-                android:inputType="textPassword"
-                android:textColorHint="@color/white"
-                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/labelCaptcha"
@@ -123,14 +102,14 @@
                 android:textSize="12sp"
                 android:gravity="center"/>
             <ImageView
-                android:id="@+id/captcha"
+                android:id="@+id/captchaFP"
                 android:layout_width="match_parent"
                 android:layout_height="80sp"
                 android:gravity="center"
                 android:layout_marginTop="10dp"
                 android:src="@drawable/ic_fingerprint"/>
             <EditText
-                android:id="@+id/editTextCaptcha"
+                android:id="@+id/editTextCaptchaFP"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -150,7 +129,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <Button
-                    android:id="@+id/buttonRefreshCaptcha"
+                    android:id="@+id/buttonRefreshCaptchaFP"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/refresh_captcha"
@@ -167,12 +146,12 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <Button
-                android:id="@+id/buttonSignUpSG"
+                android:id="@+id/buttonResetFP"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:textSize="18sp"
-                android:text="@string/label_sign_up"
+                android:text="@string/label_reset"
                 android:fontFamily="@font/gotham_bold"
                 android:textColor="@color/white"
                 android:background="@drawable/button_radius" />
@@ -180,4 +159,5 @@
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </ScrollView>
