--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,10 +26,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:textSize="12sp"
+                android:text="@string/no_account"
                 android:fontFamily="@font/avenir_roman" />
 
             <Button
-                android:id="@+id/buttonUp"
+                android:id="@+id/buttonSignUpLG"
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:textColor="@color/white"
@@ -49,7 +50,7 @@
             android:textColor="@color/white"
             android:fontFamily="@font/gotham_bold"
             android:textAllCaps="true"
-            android:text="@string/app_name"
+            android:text="@string/header"
             app:layout_constraintBottom_toTopOf="@+id/layout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -78,7 +79,7 @@
                 android:text="@string/label_email" />
 
             <EditText
-                android:id="@+id/editTextEmail"
+                android:id="@+id/editTextEmailLG"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -100,7 +101,7 @@
                 android:text="@string/label_password" />
 
             <EditText
-                android:id="@+id/editTextPass"
+                android:id="@+id/editTextPassLG"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -111,45 +112,13 @@
                 android:textColorHint="@color/white"
                 android:textColor="@color/white" />
 
-            <TextView
-                android:id="@+id/labelCaptcha"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textColor="@color/white"
-                android:text="Please Enter Captcha"
-                android:fontFamily="@font/avenir_roman"
-                android:textSize="12sp"
-                android:gravity="center"/>
-            <ImageView
-                android:id="@+id/captcha"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/ic_fingerprint"/>
-            <EditText
-                android:id="@+id/editTextCaptcha"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:textSize="12sp"
-                android:fontFamily="@font/avenir_roman"
-                android:background="@drawable/line_edit_text"
-                android:inputType="text"
-                android:textColorHint="@color/greyWhite"
-                android:hint="Enter captcha here"
-                android:layout_marginTop="8dp"
-                android:textAlignment="center"
-                android:layout_gravity="center"
-                android:textColor="@color/white" />
-
             <Button
-                android:id="@+id/buttonAction"
+                android:id="@+id/buttonLoginLG"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:textSize="18sp"
+                android:text="@string/label_login"
                 android:fontFamily="@font/gotham_bold"
                 android:textColor="@color/white"
                 android:background="@drawable/button_radius" />
