add withdraw view

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -100,17 +100,32 @@
                 android:fontFamily="@font/avenir_roman"
                 android:text="@string/label_password" />
 
-            <EditText
-                android:id="@+id/editTextPassSG"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:textSize="16sp"
-                android:fontFamily="@font/avenir_roman"
-                android:background="@drawable/line_edit_text"
-                android:inputType="textPassword"
-                android:textColorHint="@color/white"
-                android:textColor="@color/white" />
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/editTextPassSG"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/avenir_roman"
+                    android:background="@drawable/line_edit_text"
+                    android:inputType="textPassword"
+                    android:textColorHint="@color/white"
+                    android:textColor="@color/white"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+                <ImageView
+                    android:id="@+id/imageVisibilityPassSG"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_visibility_off"
+                    android:tint="@color/white"
+                    android:paddingBottom="5sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
                 android:id="@+id/labelCaptcha"
