--- a/app/src/main/res/layout/menu_option.xml
+++ b/app/src/main/res/layout/menu_option.xml
@@ -127,7 +127,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layoutNotification"
+        android:id="@+id/layoutChangePassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -139,7 +139,7 @@
         app:layout_constraintTop_toBottomOf="@id/layoutDeposit">
 
         <ImageButton
-            android:id="@+id/buttonNotification"
+            android:id="@+id/buttonLock"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:background="@drawable/button_radius"
@@ -150,7 +150,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/ic_notification" />
+            android:src="@drawable/ic_lock" />
 
         <TextView
             android:id="@+id/textNotification"
@@ -161,9 +161,9 @@
             android:textSize="15sp"
             android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
-            android:text="Notification"
-            app:layout_constraintStart_toEndOf="@id/buttonNotification"
-            app:layout_constraintTop_toTopOf="@id/layoutNotification" />
+            android:text="Change Password"
+            app:layout_constraintStart_toEndOf="@id/buttonLock"
+            app:layout_constraintTop_toTopOf="@id/layoutChangePassword" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
@@ -180,5 +180,5 @@
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layoutNotification" />
+        app:layout_constraintTop_toBottomOf="@id/layoutChangePassword" />
 </androidx.constraintlayout.widget.ConstraintLayout>
