--- a/app/src/main/res/layout/splash_main.xml
+++ b/app/src/main/res/layout/splash_main.xml
@@ -26,11 +26,27 @@
         android:id="@+id/webviewx"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginStart="1dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header" />
+        app:layout_constraintTop_toBottomOf="@+id/header" >
+
+    </WebView>
+
+    <ProgressBar
+        android:id="@+id/progressBarSP"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:theme="@style/WhiteAccent"
+        android:indeterminate="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/webviewx"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
