--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -51,6 +51,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="20dp"
+        android:padding="10dp"
         android:background="@drawable/button_up"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +62,6 @@
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
             android:src="@drawable/ic_bitcoin"
             android:foregroundGravity="center"
             app:layout_constraintStart_toStartOf="parent"
@@ -72,7 +72,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="20dp"
             android:fontFamily="@font/avenir_roman"
             android:text="balance"
             android:textColor="@color/white"
@@ -84,15 +83,11 @@
             android:id="@+id/labelCurrentBalance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="20dp"
             android:fontFamily="@font/avenir_roman"
             android:text="@string/current_balance"
             android:textColor="@color/white"
             android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/textViewBalance"
             app:layout_constraintTop_toBottomOf="@id/textViewBalance" />
 
         <Button
@@ -122,120 +117,181 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
-        android:id="@+id/textViewHaveCapcha"
+        android:id="@+id/textViewUserId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="25dp"
         android:textSize="12sp"
         android:textColor="@color/white"
         android:fontFamily="@font/avenir_roman"
-        android:layout_marginEnd="5dp"
-        android:text="requirement auto"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="15dp"
+        android:text="userID"
         app:layout_constraintTop_toBottomOf="@+id/constraintBoxBalance"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/layoutPoint"
+    <TextView
+        android:id="@+id/textViewRP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="25dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/textViewHaveCapcha"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="25dp"
+        android:fontFamily="@font/avenir_roman"
+        android:text="reward poin"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintBoxBalance" />
 
-        <TextView
-            android:id="@+id/textViewUserId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:textColor="@color/white"
-            android:fontFamily="@font/avenir_roman"
-            android:layout_marginEnd="15dp"
-            android:text="userID" />
+    <View
+        android:id="@+id/separator"
+        android:layout_width="1dp"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="45dp"
+        android:background="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewnextRoll" />
 
-        <TextView
-            android:id="@+id/textViewRP"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:textColor="@color/white"
-            android:fontFamily="@font/avenir_roman"
-            android:layout_marginEnd="15dp"
-            android:text="reward poin" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/pointTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/avenir_roman"
+        android:text="@string/rp_time"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="@id/textViewRPBonus"
+        app:layout_constraintTop_toBottomOf="@id/textViewRPBonus" />
+
+    <TextView
+        android:id="@+id/textViewRPBonus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="@font/avenir_roman"
+        android:text="@string/stop_count_hour"
+        android:textColor="@color/white"
+        android:textSize="28sp"
+        app:layout_constraintBottom_toBottomOf="@id/separator"
+        app:layout_constraintEnd_toEndOf="@id/separator"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/bonusTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/avenir_roman"
+        android:text="@string/bonus_time"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@id/textViewBTCBonus"
+        app:layout_constraintTop_toBottomOf="@id/textViewBTCBonus" />
+
+    <TextView
+        android:id="@+id/textViewBTCBonus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="@font/avenir_roman"
+        android:text="@string/stop_count_hour"
+        android:textColor="@color/white"
+        android:textSize="28sp"
+        app:layout_constraintBottom_toBottomOf="@id/separator"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/separator" />
 
     <TextView
         android:id="@+id/labelNextBTC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="8dp"
         android:textSize="12sp"
         android:text="@string/next_bitcoin"
         android:fontFamily="@font/avenir_roman"
-        app:layout_constraintTop_toBottomOf="@+id/layoutPoint"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/textViewnextRoll"
+        app:layout_constraintEnd_toEndOf="@id/textViewnextRoll"
+        app:layout_constraintStart_toStartOf="@+id/textViewnextRoll" />
 
     <TextView
         android:id="@+id/textViewnextRoll"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/gotham_bold"
         android:text="@string/stop_count_hour"
         android:textColor="@color/white"
-        android:textSize="70sp"
-        app:layout_constraintEnd_toStartOf="@id/layoutTimeBonus"
+        android:textSize="50sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/labelNextBTC" />
-
-    <LinearLayout
-        android:id="@+id/layoutTimeBonus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="23dp"
-        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewHaveCapcha">
+        app:layout_constraintTop_toBottomOf="@id/constraintBoxBalance" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintResolve"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/button_up"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/separator">
 
         <TextView
+            android:id="@+id/labelResolve"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/avenir_roman"
-            android:text="@string/rp_time"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/textViewRPBonus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/avenir_roman"
-            android:layout_marginStart="5dp"
+            android:text="Resolve Free Bitcoin"
             android:textColor="@color/white"
-            android:textSize="25sp" />
+            app:layout_constraintEnd_toEndOf="@id/constraintResolve"
+            app:layout_constraintStart_toStartOf="@id/constraintResolve"
+            app:layout_constraintTop_toTopOf="@id/constraintResolve" />
 
         <TextView
+            android:id="@+id/labelOR"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/avenir_roman"
-            android:text="@string/bonus_time"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/textViewBTCBonus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/avenir_roman"
-            android:layout_marginStart="5dp"
+            android:layout_marginTop="30dp"
             android:textColor="@color/white"
-            android:textSize="25sp" />
-    </LinearLayout>
+            android:text="OR"
+            app:layout_constraintEnd_toEndOf="@id/constraintResolve"
+            app:layout_constraintStart_toStartOf="@id/constraintResolve"
+            app:layout_constraintTop_toBottomOf="@id/labelResolve" />
+
+        <Button
+            android:id="@+id/buttonDepositResolve"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/button_blue_dark"
+            android:padding="10dp"
+            android:text="Deposit 0.0005"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="@id/labelOR"
+            app:layout_constraintEnd_toStartOf="@+id/labelOR"
+            app:layout_constraintStart_toStartOf="@id/constraintResolve"
+            app:layout_constraintTop_toTopOf="@id/labelOR" />
+
+        <Button
+            android:id="@+id/buttonCaptchaResolve"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/button_green"
+            android:padding="10dp"
+            android:textColor="@color/white"
+            android:text="Resolve Captcha"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toBottomOf="@id/labelOR"
+            app:layout_constraintEnd_toEndOf="@id/constraintResolve"
+            app:layout_constraintStart_toEndOf="@+id/labelOR"
+            app:layout_constraintTop_toTopOf="@id/labelOR" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:id="@+id/headerTransaction"
@@ -245,7 +301,7 @@
         android:background="@drawable/button_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layoutTimeBonus"
+        app:layout_constraintTop_toBottomOf="@id/constraintResolve"
         android:orientation="vertical">
 
         <TextView
