--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -134,7 +134,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_visibility_off"
-                    android:tint="@color/white"
+                    app:tint="@color/white"
                     android:paddingBottom="5sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"/>
@@ -163,6 +163,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/avenir_roman"
             android:text="@string/label_forgot_pass"
+            android:textColor="@color/white"
             android:textAlignment="textEnd"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
