--- a/app/src/main/res/drawable/bg_circle_transparent.xml
+++ b/app/src/main/res/drawable/bg_circle_transparent.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:padding="2dp"
     android:shape="rectangle">
-    <solid android:color="@color/brightBlue" />
-    <corners android:radius="8dp" />
+    <solid android:color="#33000000" />
+    <corners android:radius="30dp" />
 </shape>
