--- a/app/src/main/res/drawable/button_card.xml
+++ b/app/src/main/res/drawable/button_card.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="5dp">
     <gradient
-        android:startColor="@color/orange1"
-        android:centerColor="@color/orange2"
-        android:endColor="@color/orange3"
-        android:angle="135"/>
+        android:centerColor="@color/brightBlue"
+        android:endColor="@color/brightBlue2"
+        android:startColor="@color/brightBlue3"
+        android:angle="135" />
     <corners android:radius="15dp"/>
 </shape>
