--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,9 +17,12 @@
     <color name="orange3">#ff9b0c</color>
 
     <color name="greyishBrown">#8e8e99</color>
+    <color name="blackGrey">#65656E</color>
     <color name="greyWhite">#e0e0e3</color>
     <color name="blackTwo">#030303</color>
     <color name="brightBlue">#007aff</color>
+    <color name="brightBlue2">#1A71CF</color>
+    <color name="brightBlue3">#3090FA</color>
     <color name="transacRed">#ce3a3a</color>
     <color name="transacGreen">#3ace3a</color>
     <color name="softBlue">#71c1e5</color>
