--- a/app/src/main/res/layout/activity_withdraw.xml
+++ b/app/src/main/res/layout/activity_withdraw.xml
@@ -16,7 +16,7 @@
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:theme="@style/BlueAccent"
+            android:theme="@style/GreenAccent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -33,8 +33,7 @@
                 android:id="@+id/imageBackWD"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="?attr/actionModeCloseDrawable"
-                android:tint="@color/white"
+                android:src="@drawable/ic_back"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="18dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -123,13 +122,12 @@
             android:layout_marginStart="10dp"/>
         <EditText
             android:id="@+id/editTextBitcoinAddress"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="35dp"
             android:textSize="13sp"
             android:background="@drawable/edit_text_grey"
             android:fontFamily="@font/roboto_bold"
             android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
             android:layout_marginTop="10dp"
             android:paddingStart="10dp"
             android:hint="@string/label_btc_address"
@@ -138,7 +136,19 @@
             android:textColorHint="@color/greyishBrown"
             app:layout_constraintTop_toBottomOf="@+id/labelAddress"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toStartOf="@id/btnScanQR" />
+
+        <ImageButton
+            android:id="@+id/btnScanQR"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:src="@drawable/ic_crop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/labelAddress" />
+
         <TextView
             android:id="@+id/labelAmount"
             android:layout_width="wrap_content"
@@ -147,8 +157,9 @@
             android:fontFamily="@font/roboto_bold"
             app:layout_constraintTop_toBottomOf="@id/editTextBitcoinAddress"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="10dp"/>
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="30dp" />
+
         <EditText
             android:id="@+id/editTextAmount"
             android:layout_width="match_parent"
@@ -158,8 +169,8 @@
             android:background="@drawable/edit_text_grey"
             android:fontFamily="@font/roboto_bold"
             android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="12dp"
             android:paddingStart="10dp"
             android:hint="@string/label_enter_amount"
             android:textAllCaps="false"
@@ -167,7 +178,52 @@
             android:textColorHint="@color/greyishBrown"
             app:layout_constraintTop_toBottomOf="@+id/labelAmount"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <Button
+            android:id="@+id/btn100"
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="100%"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toTopOf="@+id/editTextAmount"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <Button
+            android:id="@+id/btn75"
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="75%"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toTopOf="@+id/editTextAmount"
+            app:layout_constraintEnd_toStartOf="@id/btn100" />
+
+        <Button
+            android:id="@+id/btn50"
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="50%"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toTopOf="@+id/editTextAmount"
+            app:layout_constraintEnd_toStartOf="@id/btn75" />
+
+        <Button
+            android:id="@+id/btn25"
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="25%"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toTopOf="@+id/editTextAmount"
+            app:layout_constraintEnd_toStartOf="@id/btn50" />
 
         <TextView
             android:id="@+id/labelFeesWD"
@@ -191,7 +247,7 @@
             android:layout_marginEnd="20dp"
             android:fontFamily="@font/roboto_bold"
             android:textSize="13sp"
-            android:textColor="@color/brightBlue"/>
+            android:textColor="@color/transacRed" />
         <Button
             android:id="@+id/buttonWithdrawWD"
             android:layout_width="match_parent"
